--- a/changelog.html
+++ b/changelog.html
@@ -5,8 +5,13 @@
 <script src="css-switching.js"></script>
 
 <hr />
-<p class="text">May 8 2018: <strong>Version 1.3.5 (VC1350)</strong></p>
+<p class="text">May 9 2018: <strong>Version 1.3.6 (VC1360)</strong></p>
 <p class="up">Newest available version!</p>
+<p class="details">- New APK file to fix the error on launch<br>
+- Slight changes to our payment debug system</p>
+
+<hr />
+<p class="text">May 8 2018: <strong>Version 1.3.5 (VC1350)</strong></p>
 <p class="details">- Permanent bug fix for the Coinbase API errors<br>
 - Possible bug fix for the internet connection errors<br>
 - New earnings calculator available in-app<br>
