--- a/reviews.html
+++ b/reviews.html
@@ -1,7 +1,7 @@
 <div id="wpac-review-recent"></div>
 <script type="text/javascript">
 wpac_init = window.wpac_init || [];
-wpac_init.push({widget: 'ReviewRecent', id: 11323});
+wpac_init.push({widget: 'ReviewRecent', id: 11323, limit: 10});
 (function() {
     if ('WIDGETPACK_LOADED' in window) return;
     WIDGETPACK_LOADED = true;
