--- a/exchange-rates-raw.html
+++ b/exchange-rates-raw.html
@@ -5,6 +5,9 @@
 <script src="css-switching.js"></script>
 
 <hr />
+<p class="text">May 9: <strong>0.061 Satoshi</strong></p> <p class="down">▼ 0.0005 Satoshi</p>
+
+<hr />
 <p class="text">May 8: <strong>0.0615 Satoshi</strong></p> <p class="up">▲ 0.001 Satoshi</p>
 
 <hr />
