--- a/changelog.html
+++ b/changelog.html
@@ -5,8 +5,12 @@
 <script src="css-switching.js"></script>
 
 <hr />
-<p class="text">May 9 2018: <strong>Version 1.3.6 (VC1360)</strong></p>
+<p class="text">May 9 2018: <strong>Version 1.3.6.1 (VC1361)</strong></p>
 <p class="up">Newest available version!</p>
+<p class="details">- Important fix for the bug introduced in VC1360 which caused all payments to fail</p>
+
+<hr />
+<p class="text">May 9 2018: <strong>Version 1.3.6 (VC1360)</strong></p>
 <p class="details">- New APK file to fix the error on launch<br>
 - Slight changes to our payment debug system</p>
 
