--- a/changelog.html
+++ b/changelog.html
@@ -5,8 +5,12 @@
 <script src="css-switching.js"></script>
 
 <hr />
-<p class="text">May 9 2018: <strong>Version 1.3.6.1 (VC1361)</strong></p>
+<p class="text">May 10 2018: <strong>Version 1.3.7 (VC1370)</strong></p>
 <p class="up">Newest available version!</p>
+<p class="details">Ads stopped showing due to our Play Store account being suspended. This update has new ad codes that should start showing later today, when the new ads work you will be able to use video ad verification again.</p>
+
+<hr />
+<p class="text">May 9 2018: <strong>Version 1.3.6.1 (VC1361)</strong></p>
 <p class="details">- Important fix for the bug introduced in VC1360 which caused all payments to fail</p>
 
 <hr />
