--- a/exchange-rates-raw.html
+++ b/exchange-rates-raw.html
@@ -5,6 +5,9 @@
 <script src="css-switching.js"></script>
 
 <hr />
+<p class="text">May 10: <strong>0.03 Satoshi</strong></p> <p class="down">▼ 0.028 Satoshi</p>
+
+<hr />
 <p class="text">May 10: <strong>0.058 Satoshi</strong></p> <p class="down">▼ 0.003 Satoshi</p>
 
 <hr />
