--- a/changelog.html
+++ b/changelog.html
@@ -5,8 +5,12 @@
 <script src="css-switching.js"></script>
 
 <hr />
-<p class="text">May 10 2018: <strong>Version 1.3.7 (VC1370)</strong></p>
+<p class="text">May 12 2018: <strong>Version 1.4 (VC1400)</strong></p>
 <p class="up">Newest available version!</p>
+<p class="details">This update has a new package name! This means that the update will be treated as a second app, instead of an update to an existing app. Please delete the old version of Mobile Miner (v.1.3.7 or below) before installing the update to avoid confusion between the 2 apps.<br><br>- Ads are working correctly again, video verification should work along with all the banner ads.<br>- New backend updates to improve user experience.<br>- Additional payment bug fixes</p>
+
+<hr />
+<p class="text">May 10 2018: <strong>Version 1.3.7 (VC1370)</strong></p>
 <p class="details">Ads stopped showing due to our Play Store account being suspended. This update has new ad codes that should start showing later today, when the new ads work you will be able to use video ad verification again.</p>
 
 <hr />
