--- a/exchange-rates-raw.html
+++ b/exchange-rates-raw.html
@@ -5,6 +5,9 @@
 <script src="css-switching.js"></script>
 
 <hr />
+<p class="text">May 12: <strong>0.031 Satoshi</strong></p> <p class="up">▲ 0.001 Satoshi</p>
+
+<hr />
 <p class="text">May 11: <strong>0.03 Satoshi</strong></p> <p class="down">▼ 0.028 Satoshi</p>
 
 <hr />
